Update label text for one-per-line option
Changed the label from 'One per line' to 'One item per line' for improved clarity in the UI.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input type="checkbox" id="show-ids-only">
             <label for="show-ids-only" style="margin-right: 15px;">Show ids only</label>
             <input type="checkbox" id="one-per-line">
-            <label for="one-per-line">One per line</label>
+            <label for="one-per-line">One item per line</label>
             <label for="view-mode-select"
                 style="margin-left: 15px; border-left: 1px solid #ccc; padding-left: 15px;">View:</label>
             <select id="view-mode-select" style="margin-left: 5px; padding: 4px;">
