Set 'One item per line' checkbox as checked by default
The 'One item per line' option in the options area is now checked by default to improve user experience.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="options-area" style="display:none; margin-bottom: 5px;">
             <input type="checkbox" id="show-ids-only">
             <label for="show-ids-only" style="margin-right: 15px;">Show ids only</label>
-            <input type="checkbox" id="one-per-line">
+            <input type="checkbox" id="one-per-line" checked>
             <label for="one-per-line">One item per line</label>
             <label for="view-mode-select"
                 style="margin-left: 15px; border-left: 1px solid #ccc; padding-left: 15px;">View:</label>
