Add support for pen family definitions in table
Introduces parsing and usage of pen family definitions from XML, passing them through to the table renderer and displaying family labels in organized views. This enhances compatibility table organization and labeling when grouping by pen family.

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
             let compatibilityRows = [];
             let tabletDefs = new Map();
             let penDefs = new Map();
+            let penFamilyDefs = new Map();
 
-            const updateTable = () => renderCompatTable(tableBody, compatibilityRows, tabletDefs, penDefs);
+            const updateTable = () => renderCompatTable(tableBody, compatibilityRows, tabletDefs, penDefs, penFamilyDefs);
 
             showIdsOnlyCheckbox.addEventListener('change', updateTable);
             onePerLineCheckbox.addEventListener('change', updateTable);
@@ -81,6 +82,7 @@
                     compatibilityRows = data.rows;
                     tabletDefs = data.tabletDefs;
                     penDefs = data.penDefs;
+                    penFamilyDefs = data.penFamilyDefs;
                     updateTable();
                     document.querySelector('.controls p').style.display = 'none'; // Hide loading text
                     optionsArea.style.display = 'block';
