Add disclaimer banner and update Wacom XML data
Added a prominent disclaimer banner to the index page and styled it in CSS to warn users about pen compatibility information. Updated wacom-pen-compat.xml to expand pen and tablet family definitions, assign tablets to families, and clarify naming conventions for better organization and accuracy.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <h1>SevenPens Wacom Tablet/Pen Compatibility (Partial)</h1>
+    <div class="disclaimer-banner">Don't trust any random internet list of pen compatibility. Not even this one. Contact
+        customer support to verify compatibility.</div>
 
     <div class="controls">
         <p>Loading <code>wacom-pen-compat.xml</code>...</p>
