--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
     <div class="controls">
         <p>Loading <code>wacom-pen-compat.xml</code>...</p>
+        <div id="search-area" style="display:none; margin-bottom: 15px;">
+            <input type="text" id="search-input" placeholder="Search devices..."
+                style="width: 100%; max-width: 400px; padding: 8px; box-sizing: border-box; border: 1px solid #ccc; border-radius: 4px;">
+        </div>
         <div id="options-area" style="display:none; margin-bottom: 5px;">
             <input type="checkbox" id="show-ids-only">
             <label for="show-ids-only" style="margin-right: 15px;">Show ids only</label>
@@ -30,10 +34,6 @@
                 <option value="by-pen">Group by pen</option>
                 <option value="ungrouped">Ungrouped</option>
             </select>
-        </div>
-        <div id="search-area" style="display:none; margin-top: 10px;">
-            <input type="text" id="search-input" placeholder="Search devices..."
-                style="width: 100%; max-width: 400px; padding: 8px; box-sizing: border-box; border: 1px solid #ccc; border-radius: 4px;">
         </div>
     </div>
     <p id="error-msg"></p>
