--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="controls">
         <p>Loading <code>wacom-pen-compat.xml</code>...</p>
         <div id="search-area" style="display:none; margin-bottom: 15px;">
-            <input type="text" id="search-input" placeholder="Search devices..."
-                style="width: 100%; max-width: 400px; padding: 8px; box-sizing: border-box; border: 1px solid #ccc; border-radius: 4px;">
+            <input type="text" id="search-input" placeholder="Search ..."
+                style="width: 100%; max-width: 800px; padding: 8px; box-sizing: border-box; border: 1px solid #ccc; border-radius: 4px;">
         </div>
         <div id="options-area" style="display:none; margin-bottom: 5px;">
             <input type="checkbox" id="show-ids-only">
