--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>SevenPens Wacom Tablet/Pen Compatibility (Partial)</h1>
+    <h1>SevenPens Wacom Pen Compatibility</h1>
     <div class="disclaimer-banner">Don't trust any random internet list of pen compatibility. Not even this one. Contact
         customer support to verify compatibility.</div>
 
