Update disclaimer banner text for clarity
Revised the disclaimer banner in index.html to emphasize contacting customer support and improved the wording for better clarity.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <h1>SevenPens Wacom Pen Compatibility</h1>
-    <div class="disclaimer-banner">Don't trust any random internet list of pen compatibility. Not even this one. Contact
-        customer support to verify compatibility.</div>
+    <div class="disclaimer-banner">Don't trust random internet pen compatibility lists. Not even this one. CONTACT
+        CUSTOMER SUPPORT to verify compatibility.</div>
 
     <div class="controls">
         <p>Loading <code>wacom-pen-compat.xml</code>...</p>
