Improve clipboard formatting and label capitalization
Updated the 'Show ids only' label to 'Show IDs only' in index.html for proper capitalization. Enhanced the copyRowToClipboard and formatItemsText functions in table-renderer.js to support indentation when formatting items for clipboard, improving readability when copying rows.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <label for="one-per-line">One item per line</label>
 
             <input type="checkbox" id="show-ids-only">
-            <label for="show-ids-only" style="margin-right: 15px;">Show ids only</label>
+            <label for="show-ids-only" style="margin-right: 15px;">Show IDs only</label>
         </div>
     </div>
     <p id="error-msg"></p>
